--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<app-header></app-header>
+<app-navbar></app-navbar>
+
+<app-signoff-section></app-signoff-section>
+<div class="content">
+  <app-sign-off></app-sign-off>
+</div>
+<div class="content">
+  <app-pending-submissions></app-pending-submissions>
+</div>
+
+<div class="content">
+  <app-general-communications></app-general-communications>
+</div>
+<div class="content">
+  <app-forms-submission></app-forms-submission>
+</div>
