--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,112 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="sections-wrapper">
+        <div class="left-section">
+            <div class="lift-content-wrapper">
+                <div class="logo-wrapper">
+                    <img src="/assets/images/logo.svg" alt="Logo" class="logo" />
+                </div>
+                <h2>
+                    Welcome to <span>The QFC Regulatory Authority</span> Electronic <br> Submission System
+                </h2>
+                <h4 id="instruction"></h4>
+                <form [formGroup]="loginForm" (ngSubmit)="login()">
+                    <mat-radio-group formControlName="idType" class="radio-group" (change)="onIdTypeChange($event.value)">
+                        <mat-radio-button value="qfc">QFC Number</mat-radio-button>
+                        <mat-radio-button value="rf">RF Number</mat-radio-button>
+                    </mat-radio-group>
+
+                    <ng-container *ngIf="idType === 'qfc'">
+                        <p class="label">Number <span class="asterisk">*</span></p>
+                        <mat-form-field appearance="outline" class="form-field">
+                            <input matInput formControlName="QfcNumber" placeholder="Enter QFC number" />
+                            <mat-error *ngIf="loginForm.get('QfcNumber')?.invalid">
+                                QFC Number is required
+                            </mat-error>
+                        </mat-form-field>
+                    </ng-container>
+
+                    <ng-container *ngIf="idType === 'rf'">
+                        <p class="label">Number <span class="asterisk">*</span></p>
+                        <mat-form-field appearance="outline" class="form-field">
+                            <input matInput formControlName="registrationDetails" placeholder="Enter RF number" />
+                            <mat-error *ngIf="loginForm.get('registrationDetails')?.invalid">
+                                RF Number is required
+                            </mat-error>
+                        </mat-form-field>
+                    </ng-container>
+
+                    <p class="label">Registered Email <span class="asterisk">*</span></p>
+                    <mat-form-field appearance="outline" class="form-field">
+                        <input matInput formControlName="email" placeholder="Enter your email" />
+                        <mat-error *ngIf="loginForm.get('email')?.invalid">Valid email is required</mat-error>
+                    </mat-form-field>
+
+                    <p class="label">Password <span class="asterisk">*</span></p>
+                    <mat-form-field appearance="outline" class="form-field">
+                        <input matInput type="password" formControlName="password" placeholder="Enter your password" />
+                        <mat-error *ngIf="loginForm.get('password')?.invalid">Password is required</mat-error>
+                    </mat-form-field>
+
+                    <div class="g-recaptcha" data-sitekey="Your_Site_Key_Here"></div>
+
+                    <div class="terms-container">
+                        <mat-checkbox formControlName="termsAgreed">I Agree to the <a href="assets/files/QFCRA_Electronic_Submission_System_Terms_Of_Use.pdf" target="_blank" rel="noopener noreferrer" class="help-text">terms of use</a></mat-checkbox>
+                        <a routerLink="/forgotpassword" class="forget-pass-link">Forgot Password?</a>
+                    </div>
+
+                    <button mat-raised-button class="login-button" type="submit" [disabled]="isSubmitting ">
+                        <span *ngIf="!isSubmitting">Login</span>
+                        <mat-spinner *ngIf="isSubmitting" diameter="20" color="warn"></mat-spinner>
+                    </button>
+
+                    <div class="contact-us-divider">
+                        <a routerLink="/contactus" class="contact-us-text">Contact us</a>
+                        <div class="divider"></div>
+                        <a href="assets/files/QFCRA_Electronic_Submission_System_User_Guide.pdf" target="_blank" rel="noopener noreferrer" class="help-text">Help</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="right-section">
+            <div class="right-content-wrapper">
+                <div class="info-section">
+                    <img src="assets/images/Paper.png" alt="Document Icon" class="document-icon" />
+                    <h3 class="system-users-title">System Users:</h3>
+                    <p class="system-users-description">
+                        This system is meant to be used by individuals from firms which are authorized to engage in regulated
+                        activities licensed by the QFC Regulatory Authority of a Designated Non-Financial Business or Professional
+                        (DNFBP).
+                    </p>
+                </div>
+                <hr />
+                <div class="compatibility-section">
+                    <p>
+                        This website works best with Internet Explorer 11, Microsoft Edge 13 and above, Firefox 47 and above, or
+                        Google Chrome 57 and above.
+                    </p>
+                </div>
+                <div class="file-links">
+                    <a href="#" class="download-link">
+                        XBRL file installer / Manual form &nbsp;
+                        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+                            <path
+                                d="M12.4169 7.27034C15.1175 7.50289 16.2203 8.89071 16.2203 11.9289V12.0264C16.2203 15.3797 14.8775 16.7225 11.5242 16.7225H6.64054C3.28727 16.7225 1.94446 15.3797 1.94446 12.0264V11.9289C1.94446 8.91322 3.03221 7.5254 5.68782 7.27784"
+                                stroke="#A51E36" stroke-width="1.03085" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M9.08594 2.09395V11.7562" stroke="#A51E36" stroke-width="1.03085" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M11.5994 10.0834L9.08632 12.5964L6.57324 10.0834" stroke="#A51E36" stroke-width="1.03085"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        &nbsp;
+                        <span class="download-text">Download file</span>
+                    </a>
+                    <a href="#" class="download-link">
+                        You can find QFC Regulatory Authority forms &nbsp;
+                        <a href="https://qfcra-en.thomsonreuters.com/rulebook/qfc-forms" target="_blank" class="download-text">Here</a>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
