--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,7 +1,18 @@
+.logo-wrapper {
+  width: 202px;
+  height: 115px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .register-container {
   background-color: #fffffe;
 
   .sections-wrapper {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -12,23 +23,34 @@
     .right-content-wrapper {
       display: flex;
       flex-direction: column;
-    //   align-items: center;
       justify-content: center;
+    }
+    .right-content-wrapper {
+      margin: 0 10% 0 -10%;
+      display: flex;
+      position: absolute;
+      padding: 142.033px 90.021px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10.002px;
+      border-radius: 24.006px;
+      border: 0.92px solid rgba(0, 0, 0, 0.12);
+      background: #fff;
     }
     .left-section,
     .right-section {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
     }
+
     .left-section {
       flex: 2;
       padding: 40px;
       background-color: #fff;
 
       .logo {
-        width: 150px;
         margin-bottom: 20px;
       }
 
@@ -37,14 +59,11 @@
         text-align: center;
         font-family: "Open Sans", sans-serif;
         font-size: 1.5rem;
-        font-style: normal;
         font-weight: 600;
-        line-height: normal;
         margin-bottom: 1.25rem;
-        text-align: start;
-        width: 40%  ;
+
         span {
-          color: #A51E36;
+          color: #a51e36;
           font-weight: 700;
         }
       }
@@ -63,35 +82,268 @@
     .right-section {
       flex: 1;
       background-color: #b11226;
-      color: #fff;
+      background-image: url("/assets/images/Rectangle 6272.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+
+      color: #000;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       padding: 40px;
+      text-align: center;
 
-      .help-section {
-        margin-bottom: 40px;
+      &.qfc {
+        background-color: #a51e36;
 
-        h3 {
-          font-size: 20px;
-          margin-bottom: 10px;
-        }
+        .system-info {
+          img {
+            content: url("/assets/images/document-icon.svg");
+            max-width: 80px;
+            margin-bottom: 20px;
+          }
 
-        p {
-          margin: 5px 0;
-          a {
-            color: #fff;
-            text-decoration: underline;
+          h3 {
+            font-size: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+          }
+
+          p {
+            margin: 5px 0;
+            font-size: 16px;
+            line-height: 1.5;
+
+            a {
+              color: #fff;
+              text-decoration: underline;
+
+              &:hover {
+                text-decoration: none;
+              }
+            }
           }
         }
       }
 
-      .download-link {
-        color: #fff;
-        font-size: 16px;
-        text-decoration: underline;
+      &.rf {
+        background-color: #b11226;
+
+        .help-section {
+          img {
+            content: url("/assets/images/world-icon.svg");
+            max-width: 80px;
+            margin-bottom: 20px;
+          }
+
+          h3 {
+            font-size: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+          }
+
+          p {
+            margin: 5px 0;
+            font-size: 16px;
+            line-height: 1.5;
+
+            a {
+              color: #fff;
+              text-decoration: underline;
+
+              &:hover {
+                text-decoration: none;
+              }
+            }
+          }
+        }
+      }
+
+      .file-section {
+        margin-top: 20px;
+
+        p {
+          font-size: 14px;
+          margin-bottom: 10px;
+        }
+
+        .download-link {
+          color: #fff;
+          font-weight: bold;
+          text-decoration: underline;
+
+          &:hover {
+            text-decoration: none;
+          }
+        }
       }
     }
   }
+}
+
+input {
+  border-radius: 7.202px !important;
+  border: 0.72px solid #b1b1b1;
+  background: #fff;
+  height: 58.013px !important;
+  width: 50%;
+  color: rgba(0, 0, 0, 0.1);
+  font-family: " Montserrat";
+  font-size: 20.405px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 156.5%;
+  padding: 0 1rem;
+}
+
+input:invalid {
+  border-bottom: 2px solid #ff3737;
+}
+
+input:valid {
+  border-bottom: 4px solid #34c759;
+}
+
+input:focus {
+  outline: none;
+  border-bottom: 2px solid #a51e36;
+}
+
+.label {
+  color: #263a43;
+  font-family: "Nunito Sans";
+  font-size: 18.004px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 156.5%;
+  margin-top: 1rem;
+}
+
+.register-button {
+  width: 100%;
+  position: relative;
+  box-shadow: 0px 4.801px 36.01px rgba(38, 58, 67, 0.15);
+  border-radius: 31.01px;
+  background-color: #a51e36;
+  height: 58px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #fff;
+  font-family: "Montserrat";
+
+  &:hover {
+    background-color: darken(#a51e36, 10%);
+  }
+}
+
+.terms-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .forget-pass-link {
+    font-size: 16.2px;
+    line-height: 156.5%;
+    color: #8e8e8e;
+    text-align: left;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.contact-us-divider {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  align-items: center;
+  margin: 1rem 0;
+  font-size: 16.2px;
+  color: #8e8e8e;
+
+  .divider {
+    width: 2px;
+    height: 20px;
+    background-color: #8e8e8e;
+  }
+}
+
+.mat-mdc-raised-button:not(:disabled) {
+  background-color: #a51e36 !important;
+  color: white !important;
+}
+
+.mdc-radio__background {
+  color: #a51e36 !important;
+}
+form {
+  width: 40%;
+  margin: auto;
+}
+.system-users-title {
+  margin: 1rem 0;
+  color: #000;
+  font-family: Montserrat;
+  font-size: 18.004px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 15.089px;
+}
+.system-users-description {
+  color: #000;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 16.004px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28.006px;
+}
+.compatibility-section {
+  color: rgba(42, 46, 51, 0.63);
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 14.003px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 15.089px;
+}
+
+.download-link {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: rgba(42, 46, 51, 0.63);
+  font-family: Montserrat;
+  font-size: 14.003px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 15.089px;
+  letter-spacing: -0.28px;
+}
+
+.download-text {
+  color: #a51e36;
+  font-family: Montserrat;
+  font-size: 14.003px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 15.089px;
+  letter-spacing: -0.28px;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
+}
+
+.file-links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
