--- a/src/app/components/system-access/system-access.component.html
+++ b/src/app/components/system-access/system-access.component.html
@@ -11,19 +11,24 @@
   <div class="table-content">
     <ag-grid-angular
       style="width: 100%; height: 500px"
-      class="ag-theme-alpine"
+      [theme]="theme"
       [modules]="modules"
       [defaultColDef]="defaultColDef"
       [columnDefs]="columnDefs"
       [rowData]="rowData"
       (cellClicked)="onCellClicked($event)"
+      [pagination]="true"
+      [paginationPageSize]="paginationPageSize"
+      [paginationPageSizeSelector]="paginationPageSizeSelector"
     >
     </ag-grid-angular>
   </div>
 
   <!-- Button Section -->
   <div class="table-footer">
-    <button class="btn-request-access"  (click)="openAccessModal()">Request Access</button>
+    <button class="btn-request-access" (click)="openAccessModal()">
+      Request Access
+    </button>
   </div>
 </div>
 <app-access-modal
