--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -79,7 +79,7 @@
             </div>
   
             <div class="button-group">
-              <button mat-raised-button class="contact-button" type="submit" [disabled]="contactForm.invalid">
+              <button mat-raised-button class="contact-button" type="submit" >
                 Submit
               </button>
               <button mat-button class="reset-button" type="button" (click)="resetForm()">Reset</button>
