dim background,branding globalize ,align input,popup animation in SA-modal

--- a/src/app/components/system-access/system-access.component.html
+++ b/src/app/components/system-access/system-access.component.html
@@ -26,7 +26,7 @@
 
   <!-- Button Section -->
   <div class="table-footer">
-    <button class="btn-request-access" (click)="openAccessModal()">
+    <button class="btn-request" (click)="openAccessModal()">
       Request Access
     </button>
   </div>
