--- a/src/app/components/system-access/access-modal/access-modal.component.html
+++ b/src/app/components/system-access/access-modal/access-modal.component.html
@@ -6,6 +6,7 @@
       id="accessType"
       [(ngModel)]="selectedAccessType"
       (change)="onAccessTypeChange($event)"
+      class="custom-select"
     >
       <option value="">Select</option>
       <option value="documentAdmin">Document Admin</option>
@@ -14,19 +15,21 @@
 
     <div id="form-container">
       <ng-container [ngSwitch]="selectedAccessType">
+        <!-- Document Admin Form -->
         <div *ngSwitchCase="'documentAdmin'">
           <label for="name">Name of the Individual:</label>
-          <input type="text" id="name" [(ngModel)]="documentAdminForm.name" />
+          <input type="text" id="name" [(ngModel)]="documentAdminForm.name" class="form-input" />
           <label for="jobTitle">Job Title:</label>
           <input
             type="text"
             id="jobTitle"
             [(ngModel)]="documentAdminForm.jobTitle"
+            class="form-input"
           />
           <label for="dob">Date of Birth:</label>
-          <input type="date" id="dob" [(ngModel)]="documentAdminForm.dob" />
+          <input type="date" id="dob" [(ngModel)]="documentAdminForm.dob" class="form-input" />
           <label for="nationality">Nationality:</label>
-          <select id="nationality" [(ngModel)]="documentAdminForm.nationality">
+          <select id="nationality" [(ngModel)]="documentAdminForm.nationality" class="form-select">
             <option value="">Select</option>
             <option value="US">United States</option>
             <option value="IN">India</option>
@@ -36,28 +39,31 @@
             type="email"
             id="email"
             [(ngModel)]="documentAdminForm.email"
+            class="form-input"
           />
           <label for="confirmEmail">Confirm Email Address:</label>
           <input
             type="email"
             id="confirmEmail"
             [(ngModel)]="documentAdminForm.confirmEmail"
+            class="form-input"
           />
         </div>
 
+        <!-- Approved Individual Form -->
         <div *ngSwitchCase="'approvedIndividual'">
           <label for="approvedName">Approved Individual Name:</label>
           <input
             type="text"
             id="approvedName"
             [(ngModel)]="approvedIndividualForm.name"
+            class="form-input"
           />
-          <label for="controlledFunctions"
-            >Approved Controlled Functions:</label
-          >
+          <label for="controlledFunctions">Approved Controlled Functions:</label>
           <select
             id="controlledFunctions"
             [(ngModel)]="approvedIndividualForm.controlledFunctions"
+            class="form-select"
           >
             <option value="">Select</option>
             <option value="Function1">Function 1</option>
@@ -65,12 +71,14 @@
           </select>
         </div>
 
+        <!-- Default Case -->
         <div *ngSwitchDefault>
           <p>Please select a valid access type to proceed.</p>
         </div>
       </ng-container>
     </div>
 
+    <!-- Modal Actions -->
     <div class="modal-actions">
       <button class="btn-close" (click)="closeModal()">Close</button>
       <button
