--- a/src/app/components/system-access/access-modal/access-modal.component.scss
+++ b/src/app/components/system-access/access-modal/access-modal.component.scss
@@ -32,6 +32,7 @@
 .form-input, .form-select {
   width: 100%; /* Ensures they fill the container */
   padding: 0.75rem;
+  height: 40px;
   margin-bottom: 1rem; /* Adds space between fields */
   border: 1px solid #ccc; /* Adds a border */
   border-radius: 4px; /* Rounded corners */
@@ -64,6 +65,7 @@ label {
 
 .custom-select {
   width: 100%;
+  height: 40px;
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -79,4 +81,35 @@ label {
     opacity: 1;
     transform: translateY(0);
   }
+}
+.personal_info{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
+}
+.right {
+  display: block;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+.left {
+  display: block;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+input select{
+  height: 40px;
+}
+.nationality{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
