--- a/src/app/components/contact-us/contact-us.component.scss
+++ b/src/app/components/contact-us/contact-us.component.scss
@@ -54,6 +54,7 @@
       }
     }
   
+
     .button-group {
       display: flex;
       justify-content: center;
@@ -63,10 +64,24 @@
       .contact-button {
         background-color: #a51e36;
         color: white;
+        font-size: 1rem;
+        font-weight: bold;
+        padding: 10px 20px;
+        border-radius: 8px;
+  
+        &:hover {
+          background-color: #8c182d;
+        }
       }
   
       .reset-button {
         color: #a51e36;
+        font-size: 1rem;
+        font-weight: bold;
+  
+        &:hover {
+          color: #8c182d;
+        }
       }
     }
   }
@@ -111,13 +126,7 @@
     margin-top: 0.3rem;
   }
   
-  .mdc-text-field__input{
-    padding-top: 8px !important; 
-  }
 
-  .mat-mdc-select{
-    padding-top: 8px !important; 
-  }
 
   .back-to-login {
     position: absolute;
