--- a/src/app/components/system-access/access-modal/access-modal.component.html
+++ b/src/app/components/system-access/access-modal/access-modal.component.html
@@ -2,17 +2,17 @@
   <div class="modal-content">
     <h3>Request Access</h3>
     <label for="accessType">Select Access Type:</label>
-    <select
+    <mat-form-field class="form-input">
+    <mat-select 
       id="accessType"
       [(ngModel)]="selectedAccessType"
       (change)="onAccessTypeChange($event)"
-      class="custom-select"
+      
     >
-      <option value="">Select</option>
-      <option value="documentAdmin">Document Admin</option>
-      <option value="approvedIndividual">Approved Individual</option>
-    </select>
-
+      <mat-option value="documentAdmin">Document Admin</mat-option>
+      <mat-option value="approvedIndividual">Approved Individual</mat-option>
+    </mat-select>
+  </mat-form-field>
     <div id="form-container">
       <ng-container [ngSwitch]="selectedAccessType">
         <!-- Document Admin Form -->
@@ -43,15 +43,16 @@
             </div>
             <div class="right">
               <label for="nationality">Nationality:</label>
-              <select
+              <mat-form-field class="form-input">
+              <mat-select 
                 id="nationality"
                 [(ngModel)]="documentAdminForm.nationality"
-                class="form-select nationality"
               >
-                <option value="">Select</option>
-                <option value="US">United States</option>
-                <option value="IN">India</option>
-              </select>
+                <mat-option value="">Select</mat-option>
+                <mat-option value="US">United States</mat-option>
+                <mat-option value="IN">India</mat-option>
+              </mat-select>
+            </mat-form-field>
             </div>
           </div>
           <label for="email">Email Address:</label>
@@ -82,15 +83,17 @@
           <label for="controlledFunctions"
             >Approved Controlled Functions:</label
           >
-          <select
+          <mat-form-field style="width: 600px ; height: 40px;">
+          <mat-select
             id="controlledFunctions"
             [(ngModel)]="approvedIndividualForm.controlledFunctions"
             class="form-select"
           >
-            <option value="">Select</option>
-            <option value="Function1">Function 1</option>
-            <option value="Function2">Function 2</option>
-          </select>
+            <mat-option value="">Select</mat-option>
+            <mat-option value="Function1">Function 1</mat-option>
+            <mat-option value="Function2">Function 2</mat-option>
+          </mat-select>
+        </mat-form-field>
         </div>
 
         <!-- Default Case -->
